# rag-mcp

./: .gitignore  README.md  pyproject.toml
deploy/: caddy-vhost.txt  rag-mcp-backfill.service  rag-mcp-backfill.timer  rag-mcp.service
hooks/: claude-rag-context.sh  claude-rag-ingest.sh  hermes-rag-context.sh  hermes-rag-ingest.sh
src/rag_mcp/: __init__.py  api.py  cli.py  config.py  db.py  embed.py  mcp_tools.py  retrieve.py  scrub.py  server.py
src/rag_mcp/export/: quality.py  sft.py
src/rag_mcp/ingest/: chunker.py  claude_transcript.py  distill.py  hermes_transcript.py  types.py  worker.py
tests/: conftest.py  test_ingest_retrieve.py  test_scrub.py  test_transcripts.py
tests/fixtures/: claude_session.jsonl  hermes_session.jsonl
training/: Modelfile.template  eval_compare.py  merge_and_export.sh  run_container.sh  train_lora.py
